Build: switch to `dune`

--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,3 @@
-*~
-*.pem
-*.cma
-*.cmxa
-*.cmo
-*.cmi
-*.cmx
-*.cmxs
-*.cmt
-*.cmti
-*.o
-*.so
-*.a
-*.swp
-*.opt
-*.run
-.omakedb*
-OMake*.omc
-*.annot
-*.sig
-perf.data*
-/dict
-/oraft_proto.ml
-/test_DES
-META
+_build
+*.install
+**/*.merlin
