Logs: switch to `logs`

--- a/src/dune
+++ b/src/dune
@@ -15,7 +15,7 @@
  (name        oraft_lwt)
  (public_name oraft-lwt)
  (preprocess (pps lwt_ppx))
- (libraries  extprot lwt.unix lwt_log oraft)
+ (libraries  extprot lwt.unix logs logs.lwt oraft)
  (wrapped false)
  (modules oraft_proto oraft_lwt)
  (flags -w -30)
@@ -33,7 +33,7 @@
  (name        oraft_rsm)
  (public_name oraft-rsm)
  (preprocess (pps lwt_ppx))
- (libraries  extprot lwt_log lwt_ppx oraft_lwt)
+ (libraries  extprot logs lwt_ppx oraft_lwt)
  (flags -w -32)
  (modules oraft_rsm)
  (synopsis ""))
