--- a/oraft-lwt-simple-io.opam
+++ b/oraft-lwt-simple-io.opam
@@ -1,5 +1,5 @@
 opam-version: "2.0"
-name: "oraft-lwt"
+name: "oraft-lwt-simple-io"
 version: "0.1"
 authors: [
   "Mauricio Fernandez <mfp@acm.org>"
@@ -15,11 +15,12 @@ depends: [
   "dune" {build & >= "1.3.0"}
   "lwt_ppx" {build & >= "1.2.1"}
   "lwt" {>= "4.1.0"}
+  "extprot" {>= "1.5.0"}
   "logs" {>= "0.6.2"}
 
-  "oraft" {= "0.1"}
+  "oraft-lwt" {= "0.1"}
 ]
-synopsis: "Lwt specialization of `oraft`"
+synopsis: "Implementation of IO module for `oraft-lwt`"
 description: """
 oraft consists of:
 
