--- a/src/dune
+++ b/src/dune
@@ -15,11 +15,23 @@
  (name        oraft_lwt)
  (public_name oraft-lwt)
  (preprocess (pps lwt_ppx))
- (libraries  extprot lwt.unix logs logs.lwt oraft)
+ (libraries  lwt.unix logs logs.lwt oraft)
  (wrapped false)
- (modules oraft_proto oraft_lwt_s oraft_lwt)
+ (modules oraft_lwt_s
+          oraft_lwt
+          oraft_lwt_conn_wrapper)
  (flags -w -30)
  (synopsis ""))
+
+(library
+ (name        oraft_lwt_simple_io)
+ (public_name oraft-lwt-simple-io)
+ (preprocess (pps lwt_ppx))
+ (libraries  extprot oraft-lwt)
+ (wrapped false)
+ (modules oraft_proto oraft_lwt_simple_io)
+ (flags -w -30)
+(synopsis ""))
 
 (library
  (name        oraft_lwt_tls)
@@ -33,7 +45,7 @@
  (name        oraft_rsm)
  (public_name oraft-rsm)
  (preprocess (pps lwt_ppx))
- (libraries  extprot logs oraft-lwt)
+ (libraries  extprot logs oraft-lwt-simple-io)
  (flags -w -32)
  (modules  oraft_rsm_s oraft_rsm)
  (synopsis ""))
