s/simple_io/extprot_io

--- a/oraft-lwt-extprot-io.opam
+++ b/oraft-lwt-extprot-io.opam
@@ -1,5 +1,5 @@
 opam-version: "2.0"
-name: "oraft-lwt-simple-io"
+name: "oraft-lwt-extprot-io"
 version: "0.1"
 authors: [
   "Mauricio Fernandez <mfp@acm.org>"
