--- a/src/dune
+++ b/src/dune
@@ -1,6 +1,18 @@
 (rule
+ (targets oraft_proto_types.ml)
+ (deps    oraft_proto_types.proto)
+ (action  (run extprotc %{deps})))
+
+(rule
  (targets oraft_proto.ml)
- (deps    oraft_proto.proto)
+ (deps    oraft_proto_types.proto
+          oraft_proto.proto)
+ (action  (run extprotc %{deps})))
+
+(rule
+ (targets oraft_proto_rsm.ml)
+ (deps    oraft_proto_types.proto
+          oraft_proto_rsm.proto)
  (action  (run extprotc %{deps})))
 
 (library
@@ -29,7 +41,7 @@
  (preprocess (pps lwt_ppx))
  (libraries  extprot oraft-lwt)
  (wrapped false)
- (modules oraft_proto oraft_lwt_extprot_io)
+ (modules oraft_proto_types oraft_proto oraft_lwt_extprot_io)
  (flags -w -30)
 (synopsis ""))
 
@@ -46,6 +58,7 @@
  (public_name oraft-rsm)
  (preprocess (pps lwt_ppx))
  (libraries  extprot logs oraft-lwt-extprot-io)
+ (wrapped false)
+ (modules  oraft_proto_rsm oraft_rsm_s oraft_rsm)
  (flags -w -32)
- (modules  oraft_rsm_s oraft_rsm)
  (synopsis ""))
